[package]
name = "rust-graphql-server"
version = "0.1.0"
authors = ["Colin McCullough <hello@colinmac.me>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libRust"

[[bin]]
path = "src/bin/main.rs"
name = "binRust"

[dependencies]
juniper = "0.11.1"
reqwest = "0.9.5"
serde_json = "1.0.33"
serde = "1.0.82"
serde_derive = "1.0.82"
env_logger = "0.5"
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
